mysql_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysqldb
  name: mysqldb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysqldb
    spec:
      containers:
      - image: mysql
        name: mysqldb
