notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: notify
  name: notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: notify
    spec:
      containers:
      - image: amaljithh/task-service
        name: notify-service
        resources: {}
status: {}
