task-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: task
  name: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task
    spec:
      containers:
      - image: amaljithh/task-service
        name: task-service
        resources: {}
status: {}
