user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user
    spec:
      containers:
      - image: amaljithh/user-service:latest
        name: user-service
        resources: {}
status: {}
