mongo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongo-db-svc
  name: mongo-db-svc
spec:
  ports:
  - name: mongo-db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
  type: ClusterIP
status:
  loadBalancer: {}
