mysql_db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql-db
  name: mysql-db
spec:
  ports:
  - name: mysql-db
    port: 3307
    protocol: TCP
    targetPort: 3307
  selector:
    app: mysqldb
  type: ClusterIP
status:
  loadBalancer: {}
