task_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: task-svc
  name: task-svc
spec:
  ports:
  - name: task-svc
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: task
  type: ClusterIP
status:
  loadBalancer: {}
